@@ -113,6 +113,10 @@ Bug Fixes
 
  5. SOLR-292: Fix MoreLikeThis facet counting. (Pieter Berkel via ryan)
 
+ 6. SOLR-297: Fix bug in RequiredSolrParams where requiring a field
+    specific param would fail if a general default value had been supplied.
+    (hossman)
+ 
 Other Changes
  1. SOLR-135: Moved common classes to org.apache.solr.common and altered the
     build scripts to make two jars: apache-solr-1.3.jar and 
